# NLP_Project_2_Transformers

./: .env.example  .gitignore  NLP_Project_2_Benjamin_Amhof.ipynb  NLP_Project_2_Benjamin_Amhof_v2.ipynb  README.md  pyproject.toml
checkpoints/: llm_test_FLIPPED_few_shot_4_claude-sonnet-4-6.jsonl  llm_test_few_shot_4_claude-sonnet-4-6.jsonl  llm_valid_few_shot_4_claude-haiku-4-5.jsonl  llm_valid_few_shot_4_claude-sonnet-4-6.jsonl  llm_valid_sophisticated_cot_carrot_claude-haiku-4-5.jsonl  llm_valid_sophisticated_cot_carrot_claude-sonnet-4-6.jsonl  llm_valid_sophisticated_cot_claude-haiku-4-5.jsonl  llm_valid_sophisticated_cot_claude-sonnet-4-6.jsonl  llm_valid_zero_shot_claude-haiku-4-5.jsonl  llm_valid_zero_shot_claude-sonnet-4-6.jsonl  pretrained_full___lr_3e-5___lr_schedule_constant_with_warmup___dropout_0.2___wd_1e-2___ep20.pt  pretrained_sweep___lr_1e-4___lr_schedule_constant_with_warmup___dropout_0.2___wd_0___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_constant_with_warmup___dropout_0.2___wd_1e-2___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_constant_with_warmup___dropout_0.4___wd_0___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_constant_with_warmup___dropout_0.4___wd_1e-2___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_cosine___dropout_0.2___wd_0___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_cosine___dropout_0.2___wd_1e-2___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_cosine___dropout_0.4___wd_0___ep5.json  pretrained_sweep___lr_1e-4___lr_schedule_cosine___dropout_0.4___wd_1e-2___ep5.json  (+90 more)
(+1 files in other folders)
