[project]
name = "nlp-p2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.1.0",
    "anthropic>=0.39.0",
    "datasets>=3.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.4",
    "scikit-learn>=1.5.0",
    "torch>=2.7,<2.8",
    "transformers>=4.46.0,<5",
    "wandb>=0.18.0",
]
